<resources>
    <string name="app_name">3DPC_TestApp</string>
    <string name="ogSpoolSize">Spool Mass (grams):</string>
    <string name="calcPrice">Calculate Price</string>
    <string name="partSize">Part Mass (grams):</string>
    <string name="spoolPrice">Spool Price:</string>
    <string name="zero">0</string>
    <string name="zeroPercent">0</string>
    <string name="priceOutput">Cost:</string>
    <string name="markup">Markup Percentage:</string>
    <string name="mkUpCost">Cost With Markup:</string>
    <string name="ppg">Price per gram:</string>
</resources>
